# iris-vector-graph

./: .dockerignore  .env.sample  .gitignore  .iris-dev.toml  .npmignore  .sesskey  AGENTS.md  API_AUDIT.md  CHANGELOG.md  CLAUDE.md  CODEX.md  DOCS_IRIS_PYTHON_ISSUES.md  ENGINEERING_DEBT.md  HIPPORAG_CONNECTION_FIX.md  IVG_CONSUMER_PAIN_POINTS.md  NEO4J_BENCHMARK_2026.md  PRE_RELEASE_CHECKLIST.md  PROGRESS.md  README.md  STATUS.md  TABNINE.md  TODO.md  coverage.json  debug_insert.py  docker-compose.enterprise-2026.yml  docker-compose.enterprise.yml  docker-compose.fraud-community.yml  docker-compose.fraud-embedded.yml  docker-compose.yaml  docker-compose.yml  module-core.xml  module.xml  pyproject.toml  research.md  string_scale_test_report.json  test-config.yml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-04-09T07-34-20-332Z.yml  page-2026-04-09T07-34-50-270Z.yml  page-2026-04-09T07-35-28-759Z.yml  page-2026-04-09T07-36-14-008Z.yml  page-2026-04-09T07-37-01-271Z.yml  page-2026-04-09T07-39-31-042Z.yml  page-2026-04-09T07-40-00-420Z.yml  page-2026-04-09T07-43-51-943Z.yml  page-2026-04-09T07-51-08-925Z.yml  page-2026-04-09T07-51-25-368Z.yml  page-2026-04-09T07-51-58-423Z.yml  page-2026-04-09T07-55-07-578Z.yml  page-2026-04-09T07-55-22-524Z.yml  page-2026-04-09T07-55-57-327Z.yml  page-2026-04-09T07-57-43-193Z.yml  page-2026-04-09T07-58-25-813Z.yml  page-2026-04-09T07-58-59-667Z.yml  page-2026-04-09T11-53-23-992Z.yml  page-2026-04-09T11-55-28-434Z.yml  page-2026-04-09T11-56-19-343Z.yml  page-2026-04-09T11-57-28-286Z.yml  page-2026-04-09T11-58-05-308Z.yml  page-2026-04-09T12-20-09-674Z.yml  page-2026-04-09T12-23-58-597Z.yml  page-2026-04-09T12-24-31-348Z.yml  page-2026-04-09T12-29-54-344Z.yml  page-2026-04-09T12-30-33-915Z.yml  page-2026-04-09T12-31-21-691Z.yml  page-2026-04-09T12-55-22-613Z.yml  page-2026-04-09T12-55-58-896Z.yml  page-2026-04-09T12-56-40-954Z.yml  page-2026-04-09T12-58-23-424Z.yml  page-2026-04-09T13-38-13-164Z.yml  page-2026-04-09T13-38-42-879Z.yml  page-2026-04-09T13-39-48-397Z.yml
.sisyphus/: ralph-loop.local.md
api/: dependencies.py  main.py
api/gql/: __init__.py  (+3 more)
benchmarks/: _load_and_bench_enterprise.py  bench_index_maintenance_strategy.py  betweenness_vs_gds_20260529_165854.json  betweenness_vs_gds_20260529_170238.json  betweenness_vs_gds_20260529_170307.json  betweenness_vs_gds_20260529_170459.json  betweenness_vs_gds_20260529_170923.json  betweenness_vs_gds_20260529_174135.json  betweenness_vs_gds_20260529_175401.json  betweenness_vs_gds_20260529_185500.json  betweenness_vs_gds_20260529_194007.json  betweenness_vs_gds_20260529_194229.json  betweenness_vs_gds_20260529_194507.json  betweenness_vs_gds_20260529_194902.json  betweenness_vs_gds_20260529_195326.json  betweenness_vs_gds_20260529_195559.json  betweenness_vs_gds_20260529_195922.json  betweenness_vs_gds_20260529_200256.json  betweenness_vs_gds_20260529_200548.json  betweenness_vs_gds_20260529_201012.json  betweenness_vs_gds_20260529_201227.json  betweenness_vs_gds_20260529_202943.json  betweenness_vs_gds_20260602_153517.json  betweenness_vs_gds_20260602_154018.json  betweenness_vs_gds_20260602_163055.json  betweenness_vs_gds_20260602_191310.json  betweenness_vs_gds_20260602_191819.json  betweenness_vs_gds_20260602_195525.json  betweenness_vs_gds_20260602_195906.json  head_to_head_20260531_141141.json  head_to_head_20260531_142417.json  head_to_head_20260531_143100.json  head_to_head_20260602_113048.json  head_to_head_20260602_113601.json  head_to_head_20260602_114058.json  head_to_head_20260602_123111.json  head_to_head_20260602_151353.json  head_to_head_20260602_151836.json  head_to_head_20260602_155604.json  head_to_head_20260602_155922.json  (+22 more)
config/: mcp-graph.toml
deploy/: Dockerfile  README.md  iris.script
docker/: Dockerfile.fraud-embedded  merge.cpf  start-fraud-server.sh
docs/: ADMIN_API.md  ADMIN_GUIDE.md  BENCHMARKS.md  COMMUNITIES.md  DOCUMENTATION_REVIEW.md  FRAUD_COMMUNITY_EDITION.md  FRAUD_SCALE_TESTING.md  KNOWN_ISSUES.md  LDBC_ALGORITHMS_QUICKREF.md  LDBC_COMPETITIVE_ANALYSIS.md  LDBC_GRAPHALYTICS_RESEARCH.md  LDBC_INDEX.md  OPERATIONS.md  README_VERBOSE.md  SEMANTIC_LAYER.md  TESTING_POLICY.md  USER_GUIDE.md  article_dc_contest.md  bulk-loader-pr.md  coverage.md  cypher-gap-recommendations.md  graph-analytics-detection-roadmap.md  index-maintenance-architecture-review.md  ldbc_snb_query_analysis.md  rdf-landscape-spike-2026.md  rdf2sql-brief.txt
examples/: demo_biomedical.py  demo_fraud_detection.py  demo_rdf_semantic_layer.py  demo_utils.py  demo_working_system.py  expanded_mindwalk_KG_10000.graphml  expanded_mindwalk_KG_10000.vectors.ids.txt  expanded_mindwalk_KG_10000.vectors.npy
iris_vector_graph/: __init__.py  _validate.py  api_auth.py  bolt_server.py  bulk_loader.py  capabilities.py  cli.py  cypher_api.py  dbapi_utils.py  embed_selector.py  embedded.py  engine.py  errors.py  fhir_bridge.py  index_config.py  index_protocol.py  models.py  operators.py  ppr_functional_index.py  ppr_globals.py  result.py  schema.py  sdk.py  security.py  status.py  store_protocol.py  utils.py  vector_utils.py
models/: fraud_mlp.torchscript
outputs/: README.md  gnn-subgraph-isomorphism-cybersecurity.provenance.md
results/: bolt_2026-05-02.csv  bolt_2026-05-02.json  ivg_on_iris_2026_1_community_2026-05-02.csv  ivg_on_iris_2026_1_community_2026-05-02.json  ivg_on_iris_2026_1_enterprise_2026-05-02.csv  ivg_on_iris_2026_1_enterprise_2026-05-02.json  ivg_on_iris_2026_2_enterprise_eap_2026-05-02.csv  ivg_on_iris_2026_2_enterprise_eap_2026-05-02.json  memgraph_2_x_2026-05-02.csv  memgraph_2_x_2026-05-02.json  neo4j_5_21_community_2026-05-02.csv  neo4j_5_21_community_2026-05-02.json
scripts/: backfill_temporal_edges.py  build_biomed_notebook.py  enterprise-container.sh  install-embedded-deps.sh  load_demo_data.py  load_drkg.py  sample_data_768.sql  seed_shaarpec_demo.py  split_cls.py  test-container.sh
sql/: fhir_bridges.sql  operators.sql  rdf_reifications.sql  schema.sql  schema_simplified.sql
tests/: TESTING.md  conftest.py  curl_suite.sh  test_schema_contract.py
(+957 files in other folders)
