[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iris-vector-graph"
version = "2.4.3"
description = "Transactional Graph + Vector retrieval system for InterSystems IRIS with hybrid search, openCypher, and GraphQL APIs"
readme = "README.md"
license = "MIT"
authors = [
  { name = "InterSystems Community Team", email = "grants@intersystems.com" },
]
keywords = [
    "graph",
    "biomedical",
    "iris",
    "knowledge-graph",
    "bioinformatics",
    "vector-search",
    "protein-interactions"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Database",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.10"

# Core dependencies
dependencies = [
    "intersystems-iris>=1.0.0",
    # iris-embedded-python-wrapper provides a unified top-level `iris` module that
    # works both as an external SDK client (iris.dbapi.connect / iris.connect) and
    # inside IRIS embedded Python (iris.sql / iris.gref / runtime.state). It is the
    # standard connection seam — base dependency so `import iris` always resolves to
    # the superset. See iris_vector_graph/embedded.py for the embedded context.
    "iris-embedded-python-wrapper>=0.5.20",
]

[project.optional-dependencies]
core = [
    "intersystems-iris>=1.0.0",
]
full = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "networkx>=3.0",
    "python-igraph>=0.11",
    "leidenalg>=0.10",
    "requests>=2.28.0",
    "rdflib>=6.0.0",
    "pyshacl>=0.25.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "pydantic>=2.11.9",
    "httpx>=0.28.1",
    "strawberry-graphql[fastapi]>=0.280.0",
    "iris-embedded-python-wrapper>=0.5.20",
]
rdf = [
    "rdflib>=6.0.0",
    "pyshacl>=0.25.0",
]
communities = [
    "python-igraph>=0.11",
    "leidenalg>=0.10",
    "networkx>=3.0",
]
plaid = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]
cli = [
    "click>=8.0.0",
    "httpx>=0.28.1",
    "tabulate>=0.9.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "iris-devtester>=1.18.1",
    "pytest-playwright>=0.7.0",
]
performance = [
    "psutil>=5.9.0",
    "memory-profiler>=0.61.0"
]
visualization = [
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "graphviz>=0.20.0"
]
ml = [
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "torch>=2.0.0"
]
biodata = [
    "biopython>=1.81",
    "bioservices>=1.11.0",
    "mygene>=3.2.0",
    "obonet>=1.0.0",
]
demo = [
    "python-fasthtml>=0.12.0"
]
browser = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
]

[project.urls]
Homepage = "https://github.com/intersystems-community/iris-vector-graph"
Documentation = "https://github.com/intersystems-community/iris-vector-graph/tree/main/docs"
Repository = "https://github.com/intersystems-community/iris-vector-graph"
Issues = "https://github.com/intersystems-community/iris-vector-graph/issues"

[project.scripts]
run-tests = "scripts.test:main"
networkx-loader = "scripts.ingest.networkx_loader:main"
ivg = "iris_vector_graph.cli:main"

[tool.hatch.build.targets.sdist]
include = ["/iris_vector_graph", "/iris_src", "/sql", "/examples", "/tests", "/README.md", "/LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["iris_vector_graph"]
artifacts = ["iris_src/src/**/*.cls"]
exclude = [
    "iris_vector_graph/browser_static",
]

# Tool configurations
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "iris",
    "networkx",
    "plotly.*",
    "bioservices.*",
    "mygene"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "-m", "not perf"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
    "perf: marks tests as opt-in performance benchmarks (run with '-m perf')",
    "requires_iris: marks tests that require IRIS database connection",
    "requires_database: marks tests that require database connection (alias for requires_iris)",
    "e2e: marks tests as end-to-end system tests (all query engines)",
    "requires_clean_isolation: marks tests needing an unpolluted database (run in isolation)"
]

[tool.coverage.run]
source = ["iris_vector_graph"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
    # Bolt server: network I/O — covered by integration tests (ivg-iris container required)
    "iris_vector_graph/bolt_server.py",
    # IRIS-native store layer: ~95% of lines call IRIS ObjectScript directly;
    # meaningful coverage only via integration tests (ivg-iris or ivg-iris-enterprise).
    # Unit coverage intentionally omitted — see docs/coverage.md
    "iris_vector_graph/stores/iris_sql_store.py",
    "iris_vector_graph/stores/arno_bridge.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
